--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,19 +1,22 @@
 <div class="todos-container">
   <div class="search-header">
-    <input  class="search-bar"
-          type="text"
-          name="todosSearchInput"
-          id="todosSearchInput"
-          placeholder="Type here to search"
-          [formControl]="search">
+    <input [formControl]="search"
+      class="search-bar"
+      type="text"
+      name="todosSearchInput"
+      id="todosSearchInput"
+      placeholder="Type here to search"
+      data-testId="search-input">
   </div>
-  <ul class="todos-list" *ngIf="viewModel$ | async as viewModel">
+  <ul *ngIf="viewModel$ | async as viewModel"
+    class="todos-list"
+    data-testId="todos-list">
     <li *ngFor="let item of viewModel.todos | todosSearchFilter: viewModel.searchInput">
       {{ item.title }}
     </li>
   </ul>
-  <div class="alert alert-danger error-message"
-    *ngIf="errorMessageAction$ | async as errorMessage">
+  <div *ngIf="errorMessageAction$ | async as errorMessage"
+    class="alert alert-danger error-message">
     {{ errorMessage }}
   </div>
 </div>
