--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,4 +1,9 @@
-<div class="todos-container">
+<div *ngLet="{
+  errorMessageAction: errorMessageAction$ | async,
+  results: results$ | async,
+  searchText: searchText$ | async
+} as state"
+class="todos-container">
   <div class="search-header">
     <input [formControl]="search"
       class="search-bar"
@@ -8,17 +13,16 @@
       placeholder="Type here to search"
       data-testId="search-input">
   </div>
-  <div *ngIf="errorMessageAction$ | async as errorMessage; else searchResults"
+  <div *ngIf="state.errorMessage; else searchResults"
     class="alert alert-danger error-message">
-    {{ errorMessage }}
+    {{ state.errorMessage }}
   </div>
   <ng-template #searchResults>
-    <ul *ngIf="results$ | async as results"
+    <ul *ngIf="state.results"
       class="todos-list"
       data-testId="todos-list">
-      <li *ngFor="let item of results">
-        {{ item.title }}
-      </li>
+      <li *ngFor="let item of state.results"
+        [innerHTML]="item.title | emphasizePattern: state.searchText"></li>
     </ul>
   </ng-template>
 </div>
