feat(todos): Move search-bar to standalone component

--- a/src/app/todos/styles/_search-header.scss
+++ b/src/app/todos/styles/_search-header.scss
@@ -1,36 +1,22 @@
-.search-header {
-  $search-header-height: 6rem;
-  $search-header-background-color: rgba(0, 17, 252, 0.726);
-  $search-header-shadow: 0px 2px 3px 0 rgba(0,0,0,0.5);
+@use "../../common/styles/search-bar-module" as search-bar-module;
 
+.search-header {
   display: flex;
+  flex-direction: column;
+  height: auto;
   justify-content: space-around;
-  height: $search-header-height;
-  background-color: $search-header-background-color;
-  box-shadow: $search-header-shadow;
 }
 
 .search-bar {
-  $search-bar-height: 2.5rem;
-  $search-bar-width: 50%;
-  $search-bar-font-size: 1rem;
-  $search-bar-border-radius: 10px;
-  $search-bar-padding: 0 10px 0 50px;
-  $search-bar-icon-img: url(./images/Search_Icon.svg);
+  $search-bar-icon-img: url(../images/Search_Icon.svg);
   $search-bar-icon-size: 1.5rem;
-  $search-bar-icon-position: 10px center;
+  $search-bar-shadow: none;
+  $search-bar-cursor: text;
 
-  display: flex;
-  align-self: center;
-  height: $search-bar-height;
-  width: $search-bar-width;
-  font-size: $search-bar-font-size;
-  border-radius: $search-bar-border-radius;
-  border-width: thin;
-  outline: none;
-  padding: $search-bar-padding;
+  @include search-bar-module.search-bar-template(
+    $search-bar-icon-size,
+    $search-bar-shadow,
+    $search-bar-cursor,
+  );
   background-image: $search-bar-icon-img;
-  background-size: $search-bar-icon-size;
-  background-repeat: no-repeat;
-  background-position: $search-bar-icon-position;
 }
