--- a/src/app/todos/styles/_container.scss
+++ b/src/app/todos/styles/_container.scss
@@ -1,5 +1,25 @@
+@keyframes fade-in {
+  0%   {height: 0%;}
+  10%  {height: 10%;}
+  20%  {height: 20%;}
+  30%  {height: 30%;}
+  40%  {height: 40%;}
+  50%  {height: 50%;}
+  60%  {height: 60%;}
+  70%  {height: 70%;}
+  80%  {height: 80%;}
+  90%  {height: 90%;}
+  100% {height: 100%;}
+}
+
 .todos-container {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 2.5rem auto;
+  background-color: rgba(250, 248, 248, 0.9);
+  box-shadow: 3px 3px 2px rgba($color: #353434c2, $alpha: 0.2);
+  border-radius: 10px;
+  animation-name: fade-in;
+  animation-duration: .1s;
 }
