--- a/src/app/todos/styles/_container.scss
+++ b/src/app/todos/styles/_container.scss
@@ -14,9 +14,9 @@
 
 .todos-container {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   display: grid;
-  grid-template-rows: 2.5rem auto;
+  grid-template-rows: 2.5rem calc(100% - 2.5rem);
   background-color: rgba(250, 248, 248, 0.9);
   box-shadow: 3px 3px 2px rgba($color: #353434c2, $alpha: 0.2);
   border-radius: 10px;
