--- a/src/app/todos/search-dropdown/search-dropdown.component.html
+++ b/src/app/todos/search-dropdown/search-dropdown.component.html
@@ -4,11 +4,12 @@
 } as state"
   class="container">
   <div></div>
-  <div (clickOutside)="onClickOutsideAutocomplete()">
+  <div (clickOutside)="closeAutocomplete()">
     <todos-autocomplete
       *ngIf="state.showsAutocomplete; else searchDropdown"
       [sourceUrls]="todoUrls"
       (itemSelected)="onItemSelected($event)"
+      (close)="closeAutocomplete()"
     ></todos-autocomplete>
     <ng-template #searchDropdown>
       <input [(ngModel)]="state.selectedValue"
