feat(todos): Add arrow-up/down autocomplete navigation

--- a/src/app/todos/search-dropdown/search-dropdown.component.html
+++ b/src/app/todos/search-dropdown/search-dropdown.component.html
@@ -3,7 +3,7 @@
   selectedValue: selectedValue$ | async
 } as state"
 (clickOutside)="closeAutocomplete()"
-class="container">
+class="dropdown-container">
   <todos-autocomplete
     *ngIf="state.showsAutocomplete; else searchDropdown"
     [sourceUrls]="sourceUrls"
