--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <search-dropdown
     [sourceUrls]="todoUrls"
     (itemSelected)="onItemSelected($event)"
-    class="search-dropdown"
+    class="todos-search-dropdown"
 ></search-dropdown>
 </div>
