--- a/src/app/todos/search-dropdown/search-dropdown.component.scss
+++ b/src/app/todos/search-dropdown/search-dropdown.component.scss
@@ -1,6 +1,6 @@
 @use "../../common/styles/search-bar-module" as search-bar-module;
 
-.container {
+.dropdown-container {
   width: 100%;
   height: 100%;
 }
