fix(todos): 'no results' when empty list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
-  <search-dropdown
+  <ui-search-dropdown
     [sourceUrls]="todoUrls"
     (itemSelected)="onItemSelected($event)"
     class="todos-search-dropdown"
-></search-dropdown>
+  ></ui-search-dropdown>
 </div>
