fix(todos): Use takeUntil pattern and tab into dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="app-container">
   <ui-search-dropdown
-    [sourceUrls]="todoUrls"
-    (itemSelected)="onItemSelected($event)"
+    (itemSelected)="logTodo($event)"
     class="todos-search-dropdown"
   ></ui-search-dropdown>
 </div>
