--- a/src/app/todos/search-dropdown/search-dropdown.component.html
+++ b/src/app/todos/search-dropdown/search-dropdown.component.html
@@ -5,17 +5,18 @@
 class="dropdown-container">
   <ui-todos-autocomplete
     *ngIf="state.showsAutocomplete; else searchDropdown"
-    [sourceUrls]="sourceUrls"
-    [selectedTodoTitle]="state.selectedValue"
+    [selectedTodo]="state.selectedValue"
     (itemSelected)="onItemSelected($event)"
     (close)="closeAutocomplete()"
   ></ui-todos-autocomplete>
   <ng-template #searchDropdown>
-    <input [(ngModel)]="state.selectedValue"
+    <input [value]="state.selectedValue.title"
       (click)="showAutocomplete($event)"
+      (focus)="showAutocomplete()"
       class="search-bar"
       type="text"
       data-testId="search-input"
+      placeholder="Select Item"
       readonly>
   </ng-template>
 </div>
