--- a/src/app/todos/todos-autocomplete/todos.component.html
+++ b/src/app/todos/todos-autocomplete/todos.component.html
@@ -3,25 +3,43 @@
     results: results$ | async,
     searchText: searchText$ | async,
     focusSuggestionIndex: focusSuggestionIndexAction$ | async
-} as state" (clickOutside)="close.emit()" class="todos-container">
+} as state"
+    (clickOutside)="close.emit()"
+    class="todos-container"
+>
     <div class="search-header">
-        <input #searchBarInput [formControl]="search" autocomplete="off" class="search-bar" type="text"
-            placeholder="Type here to search" data-testId="search-input">
+        <input #searchBarInput
+            [formControl]="search"
+            autocomplete="off"
+            class="search-bar"
+            type="text"
+            placeholder="Type here to search"
+            data-testId="search-input"
+        >
     </div>
 
     <div class="todos-list-container">
-        <div *ngIf="state.errorMessage; else searchResults" class="alert alert-danger error-message">
+        <div *ngIf="state.errorMessage; else searchResults"
+            class="alert alert-danger error-message"
+        >
             {{ state.errorMessage }}
         </div>
         <ng-template #searchResults>
-            <div *ngIf="state.results && state.results.length > 0; else noResults" data-testId="todos-list">
-                <p #todos *ngFor="let item of state.results; index as i"
+            <div *ngIf="state.results && state.results.length > 0; else noResults"
+                data-testId="todos-list"
+            >
+                <p #todos
+                    *ngFor="let item of state.results; index as i"
                     [innerHTML]="item.title | emphasizePattern: state.searchText"
-                    [class.focus-suggestion]="i === state.focusSuggestionIndex" (click)="todoSelectedHandler(item)"
-                    class="default-suggestion">
+                    [class.focus-suggestion]="i === state.focusSuggestionIndex"
+                    (click)="emitTodoSelected(item)"
+                    class="default-suggestion"
+                >
             </div>
             <ng-template #noResults>
-                <p *ngIf="state.results && state.results.length === 0" class="no-results-suggestion">
+                <p *ngIf="state.results && state.results.length === 0"
+                    class="no-results-suggestion"
+                >
                     (no results)
                 </p>
             </ng-template>
