--- a/src/app/todos/todos-autocomplete/todos.component.scss
+++ b/src/app/todos/todos-autocomplete/todos.component.scss
@@ -2,11 +2,11 @@
 
 .todos-container {
     width: 100%;
-    max-height: 100%;
+    max-height: 15rem;
     display: grid;
     grid-template-rows: 2.5rem calc(100% - 2.5rem);
-    background-color: rgba(250, 248, 248, 0.9);
-    box-shadow: 3px 3px 2px rgba($color: #353434c2, $alpha: 0.2);
+    background-color: rgb(250, 248, 248);
+    box-shadow: 3px 3px 2px rgba(170, 169, 169, 0.5);
     border-radius: 10px;
 
     .search-header {
