feat(todos): Add clear button for todos
fixup! feat(todos): Add clear button for todos

fixup! feat(todos): Add clear button for todos

fixup! feat(todos): Add clear button for todos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="app-container">
   <ui-search-dropdown
     (itemSelected)="logTodo($event)"
+    (selectionCleared)="logSelectionCleared()"
     class="todos-search-dropdown"
   ></ui-search-dropdown>
 </div>
