--- a/src/app/todos/search-dropdown/search-dropdown.component.scss
+++ b/src/app/todos/search-dropdown/search-dropdown.component.scss
@@ -14,7 +14,7 @@
     }
 
     .search-bar {
-        $search-bar-icon-img: url(../images/Drop_Down_Icon.svg);
+        $search-bar-icon-img: url(../../../assets/images/Drop_Down_Icon.svg);
         $search-bar-icon-size: 1rem;
         $search-bar-shadow: 3px 3px 2px rgba(170, 169, 169, 0.5);
         $search-bar-cursor: pointer;
@@ -23,6 +23,7 @@
         @include search-bar-module.search-bar-template($search-bar-icon-size, $search-bar-shadow, $search-bar-cursor);
         background-image: $search-bar-icon-img;
         background-color: $search-bar-background-color;
+        z-index: 3;
     }
 
     .search-bar::placeholder {
