fix(todos-dropdown): Close dropdown on blur

--- a/src/app/todos/search-dropdown/search-dropdown.component.html
+++ b/src/app/todos/search-dropdown/search-dropdown.component.html
@@ -5,6 +5,7 @@
 (clickOutside)="closeAutocomplete()"
 class="dropdown-container">
     <input [value]="state.selectedValue.title"
+      [tabindex]="state.showsAutocomplete ? -1 : 0"
       (click)="showAutocomplete()"
       (focus)="showAutocomplete()"
       class="search-bar"
